[tool.poetry]
name = "sqlalchemy-query-addons"
version = "0.1.0"
description = "DevX Addons for SQLAlchemy Queries"
authors = ["Justin Bramley <jbramley@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
